Use direct localization keys for describing an expected boolean, integer or string. Move MapTypeError to PType.Map.cs.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -92,6 +92,9 @@
     "JsonErrorMultiplePropertyKeySections": "unexpected ':', expected ',' or '}'",
     "JsonErrorMultiplePropertyKeys": "':' expected",
     "JsonErrorMultipleValues": "',' expected",
+    "JsonBoolean": "'false' or 'true' value",
+    "JsonInteger": "integer value",
+    "JsonString": "string value",
     "JsonArray": "a value array ('[1, 2, ...]')",
     "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
@@ -99,9 +102,6 @@
     "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
     "GenericJsonTypeError": "expected {0}, but found {1}",
     "GenericJsonTypeErrorSomewhere": "expected {0} for {2}, but found {1}",
-    "BooleanTypeError": "'false' or 'true' value",
-    "IntegerTypeError": "integer value",
-    "StringTypeError": "string value",
     "NoLegalValuesError": "found value {0}, but there exist no legal values",
     "NoLegalValuesErrorSomewhere": "found value {0}, but there exist no legal values for {1}",
     "RangedIntegerTypeError": "expected integer value between {2} and {3} for {0}, but found {1}",
