--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -92,6 +92,9 @@
     "JsonErrorMultiplePropertyKeySections": "onverwacht karakter ':', in plaats daarvan ',' of '}' verwacht",
     "JsonErrorMultiplePropertyKeys": "':' verwacht",
     "JsonErrorMultipleValues": "',' verwacht",
+    "JsonBoolean": "'false' of 'true' waarde",
+    "JsonInteger": "geheel getal",
+    "JsonString": "stringwaarde",
     "JsonArray": "een waardereeks ('[1, 2, ...]')",
     "JsonObject": "een object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "een ongedefinieerde waarde",
@@ -99,9 +102,6 @@
     "UnrecognizedPropertyKeyTypeError": "eigenschap identificatie {0} in object niet herkend",
     "GenericJsonTypeError": "{0} verwacht, maar er staat {1}",
     "GenericJsonTypeErrorSomewhere": "{0} voor eigenschap {2} verwacht, maar er staat {1}",
-    "BooleanTypeError": "'false' of 'true' waarde",
-    "IntegerTypeError": "geheel getal",
-    "StringTypeError": "stringwaarde",
     "NoLegalValuesError": "er staat waarde {0}, maar er bestaan geen geldige waarden",
     "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden voor eigenschap {1}",
     "RangedIntegerTypeError": "geheel getal tussen {2} en {3} voor eigenschap {0} verwacht, maar er staat {1}",
