Use GenericJsonTypeError and GenericJsonTypeErrorSomewhere to implement ranged integer type errors.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -98,13 +98,13 @@
     "JsonArray": "a value array ('[1, 2, ...]')",
     "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
+    "RangedJsonInteger": "integer value between {0} and {1}",
     "EnumerateWithOr": "{0} or {1}",
     "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
     "GenericJsonTypeError": "expected {0}, but found {1}",
     "GenericJsonTypeErrorSomewhere": "expected {0} for {2}, but found {1}",
     "NoLegalValuesError": "found value {0}, but there exist no legal values",
     "NoLegalValuesErrorSomewhere": "found value {0}, but there exist no legal values for {1}",
-    "RangedIntegerTypeError": "expected integer value between {2} and {3} for {0}, but found {1}",
     "OpaqueColorTypeError": "string in the HTML color format (e.g. \"#808000\", or \"#DC143C\")",
     "FileNameTypeError": "valid file name",
     "SubFolderNameTypeError": "valid subfolder name",
