--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -98,13 +98,13 @@
     "JsonArray": "een waardereeks ('[1, 2, ...]')",
     "JsonObject": "een object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "een ongedefinieerde waarde",
+    "RangedJsonInteger": "geheel getal tussen {0} en {1}",
     "EnumerateWithOr": "{0} of {1}",
     "UnrecognizedPropertyKeyTypeError": "eigenschap identificatie {0} in object niet herkend",
     "GenericJsonTypeError": "{0} verwacht, maar er staat {1}",
     "GenericJsonTypeErrorSomewhere": "{0} voor eigenschap {2} verwacht, maar er staat {1}",
     "NoLegalValuesError": "er staat waarde {0}, maar er bestaan geen geldige waarden",
     "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden voor eigenschap {1}",
-    "RangedIntegerTypeError": "geheel getal tussen {2} en {3} voor eigenschap {0} verwacht, maar er staat {1}",
     "OpaqueColorTypeError": "stringwaarde in het HTML kleur formaat (b.v. \"#808000\", of \"#DC143C\")",
     "FileNameTypeError": "geldige bestandsnaam",
     "SubFolderNameTypeError": "geldige mapnaam",
