Use PTypeErrorBuilder.KeyErrorLocation for all errors located at a property key.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -102,9 +102,10 @@
     "EnumerateWithOr": "{0} of {1}",
     "UnrecognizedPropertyKeyTypeError": "eigenschap identificatie {0} in object niet herkend",
     "GenericJsonTypeError": "{0} verwacht, maar er staat {1}",
-    "GenericJsonTypeErrorSomewhere": "{0} voor eigenschap {2} verwacht, maar er staat {1}",
+    "GenericJsonTypeErrorSomewhere": "{0} {2} verwacht, maar er staat {1}",
+    "KeyErrorLocation": "voor eigenschap {0}",
     "NoLegalValuesError": "er staat waarde {0}, maar er bestaan geen geldige waarden",
-    "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden voor eigenschap {1}",
+    "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden {1}",
     "OpaqueColorTypeError": "stringwaarde in het HTML kleur formaat (b.v. \"#808000\", of \"#DC143C\")",
     "FileNameTypeError": "geldige bestandsnaam",
     "SubFolderNameTypeError": "geldige mapnaam",
