--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -102,9 +102,10 @@
     "EnumerateWithOr": "{0} or {1}",
     "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
     "GenericJsonTypeError": "expected {0}, but found {1}",
-    "GenericJsonTypeErrorSomewhere": "expected {0} for {2}, but found {1}",
+    "GenericJsonTypeErrorSomewhere": "expected {0} {2}, but found {1}",
+    "KeyErrorLocation": "for {0}",
     "NoLegalValuesError": "found value {0}, but there exist no legal values",
-    "NoLegalValuesErrorSomewhere": "found value {0}, but there exist no legal values for {1}",
+    "NoLegalValuesErrorSomewhere": "found value {0}, but there exist no legal values {1}",
     "OpaqueColorTypeError": "string in the HTML color format (e.g. \"#808000\", or \"#DC143C\")",
     "FileNameTypeError": "valid file name",
     "SubFolderNameTypeError": "valid subfolder name",
