--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -109,6 +109,7 @@
     "OpaqueColorTypeError": "string in the HTML color format (e.g. \"#808000\", or \"#DC143C\")",
     "FileNameTypeError": "valid file name",
     "SubFolderNameTypeError": "valid subfolder name",
-    "TrimmedStringTypeError": "string value which contains at least one non white-space character"
+    "TrimmedStringTypeError": "string value which contains at least one non white-space character",
+    "PgnErrorIllegalCharacter": "illegal character '{0}'"
   }
 }
