Add two new PgnErrorCode values, and generate localized messages for them.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -110,6 +110,8 @@
     "FileNameTypeError": "geldige bestandsnaam",
     "SubFolderNameTypeError": "geldige mapnaam",
     "TrimmedStringTypeError": "stringwaarde met minstens één niet-witruimte karakter",
-    "PgnErrorIllegalCharacter": "ongeldig karakter '{0}'"
+    "PgnErrorIllegalCharacter": "ongeldig karakter '{0}'",
+    "PgnErrorUnterminatedTagValue": "label waarde niet afgesloten met een '\"' karakter",
+    "PgnErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')"
   }
 }
