--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -110,6 +110,8 @@
     "FileNameTypeError": "valid file name",
     "SubFolderNameTypeError": "valid subfolder name",
     "TrimmedStringTypeError": "string value which contains at least one non white-space character",
-    "PgnErrorIllegalCharacter": "illegal character '{0}'"
+    "PgnErrorIllegalCharacter": "illegal character '{0}'",
+    "PgnErrorUnterminatedTagValue": "unterminated tag value",
+    "PgnErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ('{0}')"
   }
 }
