--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -112,6 +112,7 @@
     "TrimmedStringTypeError": "stringwaarde met minstens één niet-witruimte karakter",
     "PgnErrorIllegalCharacter": "ongeldig karakter '{0}'",
     "PgnErrorUnterminatedTagValue": "label waarde niet afgesloten met een '\"' karakter",
-    "PgnErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')"
+    "PgnErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')",
+    "PgnErrorIllegalControlCharacterInTagValue": "illegaal stuurkarakter '{0}' binnen label waarde"
   }
 }
