Parse multi-line comments.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -113,6 +113,7 @@
     "PgnErrorIllegalCharacter": "ongeldig karakter '{0}'",
     "PgnErrorUnterminatedTagValue": "label waarde niet afgesloten met een '\"' karakter",
     "PgnErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')",
-    "PgnErrorIllegalControlCharacterInTagValue": "illegaal stuurkarakter '{0}' binnen label waarde"
+    "PgnErrorIllegalControlCharacterInTagValue": "illegaal stuurkarakter '{0}' binnen label waarde",
+    "PgnErrorUnterminatedMultiLineComment": "multi-regel commentaar niet afgesloten met '}' karakter"
   }
 }
