--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -113,6 +113,7 @@
     "PgnErrorIllegalCharacter": "illegal character '{0}'",
     "PgnErrorUnterminatedTagValue": "unterminated tag value",
     "PgnErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ('{0}')",
-    "PgnErrorIllegalControlCharacterInTagValue": "illegal control character '{0}' in tag value"
+    "PgnErrorIllegalControlCharacterInTagValue": "illegal control character '{0}' in tag value",
+    "PgnErrorUnterminatedMultiLineComment": "unterminated comment"
   }
 }
