Generate an error for GreenPgnUnknownSymbolSyntax instances.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -116,6 +116,7 @@
     "PgnErrorIllegalControlCharacterInTagValue": "illegal control character '{0}' in tag value",
     "PgnErrorUnterminatedMultiLineComment": "unterminated comment",
     "PgnErrorEmptyNag": "expected integer value after annotation '$'",
-    "PgnErrorOverflowNag": "expected integer value between 0 and 255 for annotation, but found '{0}'"
+    "PgnErrorOverflowNag": "expected integer value between 0 and 255 for annotation, but found '{0}'",
+    "PgnErrorUnknownSymbol": "unrecognized move or name '{0}'"
   }
 }
