Make GoToNextError/GoToPreviousError keys and translations more specific.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -53,8 +53,8 @@
     "ErrorLocation": "{0} at line {1}, position {2}",
     "Exit": "Exit",
     "File": "File",
-    "GoToNextLocation": "Go to next location",
-    "GoToPreviousLocation": "Go to previous location",
+    "GoToNextError": "Go to next message",
+    "GoToPreviousError": "Go to previous message",
     "Help": "Help",
     "JsonFiles": "Json files",
     "NoErrorsMessage": "(No errors)",
