--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -53,8 +53,8 @@
     "ErrorLocation": "{0} op regel {1}, positie {2}",
     "Exit": "Afsluiten",
     "File": "Bestand",
-    "GoToNextLocation": "Naar volgende locatie",
-    "GoToPreviousLocation": "Naar vorige locatie",
+    "GoToNextError": "Naar volgende melding",
+    "GoToPreviousError": "Naar vorige melding",
     "Help": "Help",
     "JsonFiles": "Json bestanden",
     "NoErrorsMessage": "(Geen meldingen)",
