--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -67,6 +67,7 @@
     "SaveChangesQuery": "'{0}' contains unsaved changes which will be lost if this window is closed. Save changes?",
     "SelectAll": "Select All",
     "ShowDefaultSettingsFile": "Show default settings",
+    "ShowErrorPane": "Show messages",
     "Tools": "Tools",
     "Undo": "Undo",
     "UnsavedChangesTitle": "Save changes",
