--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -119,6 +119,6 @@
     "PgnErrorUnterminatedMultiLineComment": "unterminated comment",
     "PgnErrorEmptyNag": "expected integer value after annotation '$'",
     "PgnErrorOverflowNag": "expected integer value between 0 and 255 for annotation, but found '{0}'",
-    "PgnErrorUnknownSymbol": "unrecognized move '{0}'"
+    "PgnErrorUnrecognizedMove": "unrecognized move '{0}'"
   }
 }
