Update messages translations.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -51,14 +51,14 @@
     "EditCurrentLanguage": "Edit current language",
     "EditPreferencesFile": "Edit preferences",
     "ErrorLocation": "{0} at line {1}, position {2}",
-    "ErrorPaneTitle": "{0} Messages",
+    "ErrorPaneTitle": "Messages - [{0}]",
     "Exit": "Exit",
     "File": "File",
     "GoToNextError": "Go to next message",
     "GoToPreviousError": "Go to previous message",
     "Help": "Help",
     "JsonFiles": "Json files",
-    "NoErrorsMessage": "(No errors)",
+    "NoErrorsMessage": "(No messages)",
     "OpenExecutableFolder": "Open executable folder",
     "OpenLocalAppDataFolder": "Open local application data folder",
     "Paste": "Paste",
