--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -119,6 +119,12 @@
     "PgnErrorUnterminatedMultiLineComment": "unterminated comment",
     "PgnErrorEmptyNag": "expected integer value after annotation '$'",
     "PgnErrorOverflowNag": "expected integer value between 0 and 255 for annotation, but found '{0}'",
-    "PgnErrorUnrecognizedMove": "unrecognized move '{0}'"
+    "PgnErrorUnrecognizedMove": "unrecognized move '{0}'",
+    "PgnErrorEmptyTag": "tag is missing both a name and a value",
+    "PgnErrorMissingTagBracketOpen": "tag is missing '[' character",
+    "PgnErrorMissingTagName": "tag is missing a name",
+    "PgnErrorMissingTagValue": "tag is missing a value",
+    "PgnErrorMultipleTagValues": "tag contains two or more values",
+    "PgnErrorMissingTagBracketClose": "tag is missing ']' character"
   }
 }
