--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -126,8 +126,12 @@
     "PgnErrorMissingTagValue": "label mist een waarde",
     "PgnErrorMultipleTagValues": "label bevat twee of meer waarden",
     "PgnErrorMissingTagBracketClose": "label mist een ']' karakter",
-    "PgnErrorMissingMoveNumber": "eerste zet in een hoofd- of zijvariant hoort te zijn voorzien van een zetnummer",
+    "PgnErrorMissingMoveNumber": "zetnummer ontbreekt bij eerste zet in een hoofd- of zijvariant",
     "PgnErrorMissingMove": "zet notatie verwacht maar niet gevonden",
-    "PgnErrorOrphanPeriod": "punt '.' karakter gevonden op een plaats anders dan tussen een zetnummer en zetnotatie"
+    "PgnErrorOrphanPeriod": "'.' karakter gevonden op een plaats anders dan tussen een zetnummer en zetnotatie",
+    "PgnErrorOrphanParenthesisClose": "')' karakter zonder bijbehorend '(' karakter gevonden",
+    "PgnErrorMissingParenthesisClose": "')' karakter ontbreekt aan het eind van variant",
+    "PgnErrorEmptyVariation": "variant is leeg",
+    "PgnErrorVariationBeforeNAG": "mogelijk onbedoelde annotatie na variant"
   }
 }
