Report errors for tag elements within a move tree section.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -130,6 +130,9 @@
     "PgnErrorMissingMove": "move expected but not found",
     "PgnErrorOrphanPeriod": "found '.' character somewhere not between a move number and a move",
     "PgnErrorOrphanParenthesisClose": "found ')' character without matching '(' character",
+    "PgnErrorOrphanBracketOpen": "found '[' character in the middle of a game",
+    "PgnErrorOrphanTagValue": "found tag value in the middle of a game",
+    "PgnErrorOrphanBracketClose": "found ']' character in the middle of a game",
     "PgnErrorMissingParenthesisClose": "missing ')' character at the end of side line",
     "PgnErrorEmptyVariation": "side line is empty",
     "PgnErrorVariationBeforeNAG": "possibly unintentional annotation after side line",
