--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -130,6 +130,9 @@
     "PgnErrorMissingMove": "zet notatie verwacht maar niet gevonden",
     "PgnErrorOrphanPeriod": "'.' karakter gevonden op een plaats anders dan tussen een zetnummer en zetnotatie",
     "PgnErrorOrphanParenthesisClose": "')' karakter zonder bijbehorend '(' karakter gevonden",
+    "PgnErrorOrphanBracketOpen": "'[' karakter gevonden binnen een zettenreeks",
+    "PgnErrorOrphanTagValue": "label waarde gevonden binnen een zettenreeks",
+    "PgnErrorOrphanBracketClose": "']' karakter gevonden binnen een zettenreeks",
     "PgnErrorMissingParenthesisClose": "')' karakter ontbreekt aan het eind van variant",
     "PgnErrorEmptyVariation": "variant is leeg",
     "PgnErrorVariationBeforeNAG": "mogelijk onbedoelde annotatie na variant",
