--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -3,7 +3,6 @@
   "flag_icon_file": "flag-uk.png",
   "translations": {
     "BreakAtCurrentPosition": "Break at current position",
-    "Chessboard": "Chessboard",
     "CopyDiagramToClipboard": "Copy diagram to clipboard",
     "DeleteLine": "Delete line",
     "DemoteLine": "Demote line",
@@ -18,6 +17,7 @@
     "NewGameFile": "New game file",
     "NextLine": "Next line",
     "NextMove": "Next move",
+    "OpenGame": "Open game",
     "OpenGameFile": "Open game file",
     "PgnFiles": "Portable game notation files",
     "PreviousLine": "Previous line",
