Add definitions for window menu actions with their English and Dutch translations.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -69,6 +69,11 @@
     "UnsavedChangesTitle": "Save changes",
     "Untitled": "Untitled",
     "View": "View",
+    "WindowMaximize": "Maximize",
+    "WindowMinimize": "Minimize",
+    "WindowMove": "Move",
+    "WindowRestore": "Restore",
+    "WindowSize": "Size",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
     "JsonErrorUnexpectedSymbol": "unexpected symbol '{0}'",
