--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -69,6 +69,11 @@
     "UnsavedChangesTitle": "Opslaan wijzigingen",
     "Untitled": "Naamloos",
     "View": "Beeld",
+    "WindowMaximize": "Maximaliseren",
+    "WindowMinimize": "Minimaliseren",
+    "WindowMove": "Verplaatsen",
+    "WindowRestore": "Vorig formaat",
+    "WindowSize": "Formaat wijzigen",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
     "JsonErrorUnexpectedSymbol": "onbekend symbool '{0}'",
