Generate quote characters in JsonErrorInfoParameterDisplayHelper for character parameters.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -76,11 +76,11 @@
     "WindowSize": "Size",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
-    "JsonErrorUnexpectedSymbol": "unexpected symbol '{0}'",
+    "JsonErrorUnexpectedSymbol": "unexpected symbol {0}",
     "JsonErrorUnterminatedMultiLineComment": "unterminated multi-line comment",
     "JsonErrorUnterminatedString": "unterminated string",
     "JsonErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ('{0}')",
-    "JsonErrorIllegalControlCharacterInString": "illegal control character '{0}' in string",
+    "JsonErrorIllegalControlCharacterInString": "illegal control character {0} in string",
     "JsonErrorExpectedEof": "end of file expected",
     "JsonErrorUnexpectedEofInObject": "unexpected end of file, expected '}'",
     "JsonErrorUnexpectedEofInArray": "unexpected end of file, expected ']'",
