--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -76,11 +76,11 @@
     "WindowSize": "Formaat wijzigen",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
-    "JsonErrorUnexpectedSymbol": "onbekend symbool '{0}'",
+    "JsonErrorUnexpectedSymbol": "onbekend symbool {0}",
     "JsonErrorUnterminatedMultiLineComment": "multi-regel commentaar niet afgesloten met '*/' karakters",
     "JsonErrorUnterminatedString": "stringwaarde niet afgesloten met een '\"' karakter",
     "JsonErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')",
-    "JsonErrorIllegalControlCharacterInString": "illegaal stuurkarakter '{0}' binnen stringwaarde",
+    "JsonErrorIllegalControlCharacterInString": "illegaal stuurkarakter {0} binnen stringwaarde",
     "JsonErrorExpectedEof": "einde van bestand verwacht",
     "JsonErrorUnexpectedEofInObject": "onverwacht einde van bestand, in plaats daarvan '}' verwacht",
     "JsonErrorUnexpectedEofInArray": "onverwacht einde van bestand, in plaats daarvan ']' verwacht",
