Generate quote characters in JsonErrorInfoParameterDisplayHelper for string parameters.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -79,7 +79,7 @@
     "JsonErrorUnexpectedSymbol": "unexpected symbol {0}",
     "JsonErrorUnterminatedMultiLineComment": "unterminated multi-line comment",
     "JsonErrorUnterminatedString": "unterminated string",
-    "JsonErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ('{0}')",
+    "JsonErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ({0})",
     "JsonErrorIllegalControlCharacterInString": "illegal control character {0} in string",
     "JsonErrorExpectedEof": "end of file expected",
     "JsonErrorUnexpectedEofInObject": "unexpected end of file, expected '}'",
@@ -90,7 +90,7 @@
     "JsonErrorPropertyKeyAlreadyExists": "key {0} already exists in object",
     "JsonErrorMissingPropertyKey": "missing property key",
     "JsonErrorMissingValue": "missing value",
-    "JsonErrorUnrecognizedValue": "unrecognized value '{0}'",
+    "JsonErrorUnrecognizedValue": "unrecognized value {0}",
     "JsonErrorMultiplePropertyKeySections": "unexpected ':', expected ',' or '}'",
     "JsonErrorMultiplePropertyKeys": "':' expected",
     "JsonErrorMultipleValues": "',' expected",
