--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -79,7 +79,7 @@
     "JsonErrorUnexpectedSymbol": "onbekend symbool {0}",
     "JsonErrorUnterminatedMultiLineComment": "multi-regel commentaar niet afgesloten met '*/' karakters",
     "JsonErrorUnterminatedString": "stringwaarde niet afgesloten met een '\"' karakter",
-    "JsonErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ('{0}')",
+    "JsonErrorUnrecognizedEscapeSequence": "escape karakter reeks niet herkend ({0})",
     "JsonErrorIllegalControlCharacterInString": "illegaal stuurkarakter {0} binnen stringwaarde",
     "JsonErrorExpectedEof": "einde van bestand verwacht",
     "JsonErrorUnexpectedEofInObject": "onverwacht einde van bestand, in plaats daarvan '}' verwacht",
@@ -90,7 +90,7 @@
     "JsonErrorPropertyKeyAlreadyExists": "eigenschap identificatie {0} bestaat al in object",
     "JsonErrorMissingPropertyKey": "eigenschap identificatie ontbreekt",
     "JsonErrorMissingValue": "waarde ontbreekt",
-    "JsonErrorUnrecognizedValue": "waarde '{0}' niet herkend",
+    "JsonErrorUnrecognizedValue": "waarde {0} niet herkend",
     "JsonErrorMultiplePropertyKeySections": "onverwacht karakter ':', in plaats daarvan ',' of '}' verwacht",
     "JsonErrorMultiplePropertyKeys": "':' verwacht",
     "JsonErrorMultipleValues": "',' verwacht",
