Handle default case of a JsonErrorInfoParameter of an unrecognized type and add unit tests.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -76,6 +76,8 @@
     "WindowSize": "Size",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
+    "NullString": "<null>",
+    "UntypedObjectString": "{0}",
     "JsonErrorUnexpectedSymbol": "unexpected symbol {0}",
     "JsonErrorUnterminatedMultiLineComment": "unterminated multi-line comment",
     "JsonErrorUnterminatedString": "unterminated string",
