--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -109,6 +109,7 @@
     "GenericJsonTypeError": "{0} verwacht, maar er staat {1}",
     "GenericJsonTypeErrorSomewhere": "{0} {2} verwacht, maar er staat {1}",
     "KeyErrorLocation": "voor eigenschap {0}",
+    "IndexErrorLocation": "op index {0}",
     "NoLegalValuesError": "er staat waarde {0}, maar er bestaan geen geldige waarden",
     "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden {1}",
     "OpaqueColorTypeError": "stringwaarde in het HTML kleur formaat (b.v. \"#808000\", of \"#DC143C\")",
